--- a/main.html
+++ b/main.html
@@ -8,6 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<!-- <button id="1" class="Primary button"></button>
+	<button id="2" class="Outline secondary button"></button>
+	<button id="3" class="Success large button"></button>
+	<button id="4" class="Danger small button"></button>
+	<button id="5" class="Warning large full-screen width button"></button>
+	<button id="6" class="Disabled info button"></button>
+	<button id="7" class="Light button"></button>
+	<button id="8" class="Link button"></button> -->
+	<button type="button" class="btn btn-outline-primary">Primary</button>
+<button type="button" class="btn btn-outline-secondary">Secondary</button>
+<button type="button" class="btn btn-outline-success">Success</button>
+<button type="button" class="btn btn-outline-danger">Danger</button>
+<button type="button" class="btn btn-outline-warning">Warning</button>
+<button type="button" class="btn btn-outline-info">Info</button>
+<button type="button" class="btn btn-outline-light">Light</button>
+<button type="button" class="btn btn-outline-dark">Dark</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
