--- a/main.html
+++ b/main.html
@@ -4,26 +4,22 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-	<!-- <button id="1" class="Primary button"></button>
-	<button id="2" class="Outline secondary button"></button>
-	<button id="3" class="Success large button"></button>
-	<button id="4" class="Danger small button"></button>
-	<button id="5" class="Warning large full-screen width button"></button>
-	<button id="6" class="Disabled info button"></button>
-	<button id="7" class="Light button"></button>
-	<button id="8" class="Link button"></button> -->
-	<button type="button" class="btn btn-outline-primary">Primary</button>
-<button type="button" class="btn btn-outline-secondary">Secondary</button>
-<button type="button" class="btn btn-outline-success">Success</button>
-<button type="button" class="btn btn-outline-danger">Danger</button>
-<button type="button" class="btn btn-outline-warning">Warning</button>
-<button type="button" class="btn btn-outline-info">Info</button>
-<button type="button" class="btn btn-outline-light">Light</button>
-<button type="button" class="btn btn-outline-dark">Dark</button>
+	<button type="button" id="1" class="btn btn-primary">Button-1</button>
+	<button  type="button" id="2" class="btn btn-secondary">>Button-2</button>
+	<button type="button" id="3" class="btn btn-success">>Button-3</button>
+	<button type="button" id="4" class="btn btn-danger">Button-4</button>
+	<button type="button" id="5" class="btn btn-warning"">Button-5</button>
+	<button type="button" id="6" class="btn btn-info">Button-6</button>
+	<button type="button" id="7" class="btn btn-light">Button-7</button>
+	<button type="button" id="8" class="btn btn-dark">Button-8</button>
+	
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./script.js">
 </script>
 
