--- a/main.html
+++ b/main.html
@@ -9,14 +9,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<button type="button" id="1" class="btn btn-primary">Button-1</button>
-	<button  type="button" id="2" class="btn btn-outline-secondary">Button-2</button>
-	<button type="button" id="3" class="btn btn-success btn-lg">Button-3</button>
-	<button type="button" id="4" class="btn btn-danger btn-sm">Button-4</button>
-	<button type="button" id="5" class="btn btn-warning btn-lg w-100"">Button-5</button>
-	<button type="button" id="6" class="btn btn-info" disabled>Button-6</button>
-	<button type="button" id="7" class="btn btn-light">Button-7</button>
-	<button type="button" id="8" class="btn btn-dark" href="#">Button-8</button>
+	<button type="button" id="button-1" class="btn btn-primary">Button-1</button>
+	<button  type="button" id="button-2" class="btn btn-outline-secondary">Button-2</button>
+	<button type="button" id="button-3" class="btn btn-success btn-lg">Button-3</button>
+	<button type="button" id="button-4" class="btn btn-danger btn-sm">Button-4</button>
+	<button type="button" id="button-5" class="btn btn-warning btn-lg w-100"">Button-5</button>
+	<button type="button" id="button-6" class="btn btn-info" disabled>Button-6</button>
+	<button type="button" id="button-7" class="btn btn-light">Button-7</button>
+	<button type="button" id="button-8" class="btn btn-dark" href="#">Button-8</button>
 	
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
